<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepsi_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="anthony.bassil3@net.usj.edu.lb">anthony</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ultralytics</exec_depend> <!-- YOLOv8 dependency -->
  <depend>rosidl_default_generators</depend>
  <exec_depend>std_msgs</exec_depend>



  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <launchfile path="launch/pepsi_detection_launch.py"/>
    <launchfile path="launch/qr_code_launch.py"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
